feat : add new entry point for an array of ADS-B messages
