# dapia_detection_api/models/__init__.py
@@ -2,6 +2,7 @@
 # import models into model package
 from dapia_detection_api.models.aircraft_types import AircraftTypes
 from dapia_detection_api.models.classify_aircraft_request import ClassifyAircraftRequest
+from dapia_detection_api.models.classify_aircrafts_request import ClassifyAircraftsRequest
 from dapia_detection_api.models.data import Data
 from dapia_detection_api.models.data1 import Data1
 from dapia_detection_api.models.response200_classify_aircraft import Response200ClassifyAircraft
