# dapia_detection_api/models/classify_aircrafts_request.py
@@ -1,0 +1,61 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from dapia_detection_api.models.base_model import Model
+from dapia_detection_api import util
+
+
+class ClassifyAircraftsRequest(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message=None):  # noqa: E501
+        """ClassifyAircraftsRequest - a model defined in OpenAPI
+
+        :param message: The message of this ClassifyAircraftsRequest.  # noqa: E501
+        :type message: List[object]
+        """
+        self.openapi_types = {
+            'message': List[object]
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ClassifyAircraftsRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The classify_aircrafts_request of this ClassifyAircraftsRequest.  # noqa: E501
+        :rtype: ClassifyAircraftsRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> List[object]:
+        """Gets the message of this ClassifyAircraftsRequest.
+
+
+        :return: The message of this ClassifyAircraftsRequest.
+        :rtype: List[object]
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: List[object]):
+        """Sets the message of this ClassifyAircraftsRequest.
+
+
+        :param message: The message of this ClassifyAircraftsRequest.
+        :type message: List[object]
+        """
+
+        self._message = message
